--- a/openmetadata-ui/src/main/resources/ui/src/components/MyData/CustomizableComponents/CustomizeMyData/customize-my-data.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/MyData/CustomizableComponents/CustomizeMyData/customize-my-data.less
@@ -23,13 +23,7 @@
 }
 
 .grid-wrapper {
-  position: relative;
-
   .grid-container {
-    position: absolute;
-    top: 430px;
-    left: 0;
-    right: 0;
-    z-index: 10;
+    margin-top: -250px;
   }
 }
